// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateOrUpdateArticleReplyFeedback creates feedback on given article reply 1`] = `
Object {
  "CreateOrUpdateArticleReplyFeedback": Object {
    "feedbackCount": 2,
    "negativeFeedbackCount": 0,
    "positiveFeedbackCount": 2,
  },
}
`;

exports[`CreateOrUpdateArticleReplyFeedback creates feedback on given article reply 2`] = `
Object {
  "appId": "test",
  "articleId": "article1",
  "comment": "comment1",
  "createdAt": "2017-01-28T08:45:57.011Z",
  "replyId": "reply1",
  "score": 1,
  "updatedAt": "2017-01-28T08:45:57.011Z",
  "userId": "test",
}
`;

exports[`CreateOrUpdateArticleReplyFeedback creates feedback on given article reply 3`] = `
Array [
  Object {
    "negativeFeedbackCount": 0,
    "positiveFeedbackCount": 2,
    "replyId": "reply1",
  },
]
`;

exports[`CreateOrUpdateArticleReplyFeedback updates existing feedback 1`] = `
Object {
  "CreateOrUpdateArticleReplyFeedback": Object {
    "feedbackCount": 1,
    "negativeFeedbackCount": 1,
    "positiveFeedbackCount": 0,
  },
}
`;

exports[`CreateOrUpdateArticleReplyFeedback updates existing feedback 2`] = `
Object {
  "appId": "testClient",
  "articleId": "article1",
  "createdAt": "2017-01-01T00:00:00.000Z",
  "replyId": "reply1",
  "score": -1,
  "updatedAt": "2017-01-28T08:45:57.011Z",
  "userId": "testUser",
}
`;
